# eGovernmentBenchmark

./: .gitignore  README.md  pyproject.toml
data/: 7_eGovernment_Benchmark_2023__Nonscored_Indicators_p7bzcFp2z9UuHIKhwXtjloGEqOQ_98713.xlsx
output/: italy_nat_services_data.xlsx  results.xlsx
src/: main.py  main_streamlit.py  mapping.py  translations.py
