[tool.poetry]
name = "egovernmentbenchmark"
version = "0.1.0"
description = "Analysis for increase eGovbenchmark score"
authors = ["gabboDTD <gabriele.spina@teamdigitale.governo.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
seaborn = "^0.13.2"
streamlit = "^1.36.0"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
